# mpusb

./: .gitignore  Makefile  Makefile.am  configure.in  main.c  mpusb.c  mpusb.h
m4/: mpusb_check_libusb.m4
mpusb/: Makefile.am  debug.c  debug.h  main.c  mpusb.c  mpusb.h  usb-avr-driver.c  usb-avr-driver.h  usb-drivers.h  usb-pic-driver.c  usb-pic-driver.h  usb-transport.c  usb-transport.h
mpusb-framework/: MPI2CDevice.h  MPI2CDevice.m  mpusb-framework_Prefix.pch  mpusbapi.h  mpusbapi.m  mpusbdevice.h  mpusbdevice.m
mpusb-framework/mpusb-framework.xcodeproj/: project.pbxproj
mpusb-ruby/: mpusb.gemspec
mpusb-ruby/examples/: lcdtest.rb  lcdtest2.rb  setserial.rb
mpusb-ruby/ext/: extconf.rb  mpusb.c  mpusbapi.c
mpusb-ruby/lib/: mpusb.rb
mpusb-ruby/lib/mpusb/: mpusb.rb
src/: Makefile.am  main.h
