dnl $Id: configure.in 1706 2007-12-28 08:48:51Z rpedde $
dnl
dnl Process this file with autoconf to produce a configure script.
AC_INIT(mpusb/main.c, 0.0.1)
AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE

AC_USE_SYSTEM_EXTENSIONS

dnl Checks for programs.
AC_PROG_CC
AC_PROG_LIBTOOL

CPPFLAGS="${CPPFLAGS} -g -Wall"
CFLAGS=""

echo Host type is $host
CPPFLAGS="$CPPFLAGS -DHOST='\"$host\"'"

case $host in
*darwin*)
	CPPFLAGS="$CPPFLAGS -no-cpp-precomp -DMAC"
	LDFLAGS="$LDFLAGS -framework CoreFoundation"
esac

AC_ARG_WITH(usb-libs,
	[ --with-usb-libs[[=DIR]]              link to libusb in DIR],[
	if test "$withval" != "no" -a "$withval" != "yes"; then
	   Z_DIR=$withval
	   LDFLAGS="${LDFLAGS} -L$withval -lusb"
	fi
])

AC_ARG_WITH(usb-includes,
	[ --with-usb-includes[[=DIR]]          link to libusb in DIR],[
	if test "$withval" != "no" -a "$withval" != "yes"; then
	   Z_DIR=$withval
	   CPPFLAGS="${CPPFLAGS} -I$withval"
	fi
])

MPUSB_CHECK_LIBUSB()

echo "CFLAGS: $libusb_CFLAGS"
echo "LIBS: $libusb_LIBS"

CFLAGS="${CFLAGS} $libusb_CFLAGS"
LDFLAGS="${LDFLAGS} $libusb_LIBS -lreadline"

AC_OUTPUT(mpusb/Makefile Makefile)
